# nats-js-prom

./: .containerignore  .gitignore  Containerfile  README.md  getver.sh  pyproject.toml
.github/workflows/: image.yml
helm/chart/: Chart.yaml  README.md  values.yaml
helm/chart/templates/: configMap.yaml  deployment.yaml  podMonitor.yaml
src/nats_js_prom/: __init__.py  __main__.py  config.py  injectables.py  server.py
